# rsh

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.ymlcmake-multi-platform.yml
src/: main.c
